--- a/react-frontend/Dockerfile
+++ b/react-frontend/Dockerfile
@@ -1,13 +1,12 @@
 # Use the official Node.js image
-FROM node:14
+FROM node:20-alpine
 
 # Set the working directory in the container
 WORKDIR /app
 
 # Copy package.json and install dependencies
-COPY package.json /app/
-COPY package-lock.json /app/
-RUN npm install
+COPY package.json yarn.lock /app/
+RUN yarn install
 
 # Copy the frontend code
 COPY . /app
@@ -16,4 +15,4 @@ COPY . /app
 EXPOSE 3000
 
 # Run the React app
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
