--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -2,13 +2,22 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "eslint-plugin-react": "^7.28.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/yup": "^0.32.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dotenv-cli": "^8.0.0",
+    "eslint": "^9.20.0",
     "formik": "^2.4.6",
     "i18next": "^24.2.0",
     "jwt-decode": "^4.0.0",
@@ -17,9 +26,11 @@
     "react-i18next": "^15.2.0",
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
     "socket.io-client": "^4.8.1",
+    "typescript": "^5.7.3",
     "yup": "^1.6.1"
   },
   "scripts": {
@@ -48,6 +59,15 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "workbox-webpack-plugin": "^7.3.0"
   }
 }
