--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - ./react-frontend/certs:/app/certs:ro
     depends_on:
       - flask-backend
+    restart: always
+
   flask-backend:
     build:
       context: ./flask-backend
@@ -39,6 +41,7 @@ services:
         condition: service_healthy
     volumes:
       - ./flask-backend/certs:/flask-backend/certs:ro
+    restart: always
 
   db:
     image: postgres:17-alpine
@@ -60,3 +63,4 @@ services:
       retries: 5
     volumes:
       - ./db-data:/var/lib/postgresql/data
+    restart: always
